<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    tools:context="com.coder.frank.studentdata.DeleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/delete" />

        <EditText
            android:id="@+id/delid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_id_to_delete_data" />

        <Button
            android:id="@+id/delbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="delete"
            android:text="@string/delete_student_data" />
        <TextView
            android:text="@string/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/textView" />
    </LinearLayout>
</RelativeLayout>

