<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp"
    tools:context="com.coder.frank.studentdata.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout25">

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/student_details"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />


        </LinearLayout>




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutid">

            <TextView
                android:id="@+id/uid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/student_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"

                android:ems="10"
                android:id="@+id/updateid" />

        </LinearLayout>





        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/student_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/linearLayout25"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textNoSuggestions" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"

                android:ems="10"
                android:id="@+id/editText2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rollno"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"

                android:ems="10"
                android:id="@+id/editText3" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout24">

            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit_test"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ut1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:ems="10"
                android:id="@+id/editText4" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout9">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ut2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:ems="10"
                android:id="@+id/editText5" />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout23">

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attendance"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout21">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attendance_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:ems="10"
                android:id="@+id/editText6" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout22">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attendance_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="23sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:ems="10"
                android:id="@+id/editText7" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4"
            android:onClick="submitData">


            />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitData"
                android:text="@string/submit" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout7"
            android:onClick="submitData">


            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/result"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
